tests/errors/missing-bra.sbl
strings
externals (stem)
backwardmode
define stem as (
  among
)
